--- a/web_resources/streaming.html
+++ b/web_resources/streaming.html
@@ -1,25 +1,37 @@
 <!doctype>
 <!-- similar to http://code.shutterstock.com/rickshaw/examples/fixed.html -->
 <head>
+	<link type="text/css" rel="stylesheet" href="http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css">
+
 	<link type="text/css" rel="stylesheet" href="static/graph.css">
 	<link type="text/css" rel="stylesheet" href="static/detail.css">
 	<link type="text/css" rel="stylesheet" href="static/legend.css">
 	<link type="text/css" rel="stylesheet" href="static/extensions.css">
 
-	<script src="static/jquery.min.js"></script>
 	<script src="static/d3.v2.js"></script>
+
+	<script src="static/jquery.min.js"></script>
+	<script src="static/jquery-ui.min.js"></script>
+
 	<script src="static/rickshaw.js"></script>
 
 </head>
 <body>
 
+
 <div id="content">
-	<div id="chart"></div>
+	<div id="chart_container">
+		<div id="chart"></div>
+		<div id="legend_container">
+			<div id="legend"></div>
+		</div>
+		<div id="slider"></div>
+	</div>
 </div>
 
 <script>
 
-var tv = 1500;
+var tv = 500;
 
 // instantiate our graph!
 var graph = new Rickshaw.Graph( {
@@ -27,14 +39,50 @@ var graph = new Rickshaw.Graph( {
 	width: 900,
 	height: 500,
 	renderer: 'line',
-	series: new Rickshaw.Series.FixedDuration([{ name: 'gauge1' }], undefined, {
+        interpolation: 'linear',
+	series: new Rickshaw.Series.FixedDuration([
+		{ name: 'gauge 6' },
+		{ name: 'gauge 5' },
+		{ name: 'gauge 4' },
+		{ name: 'gauge 3' },
+		{ name: 'gauge 2' },
+		{ name: 'gauge 1' }
+		], undefined, {
 		timeInterval: tv,
-		maxDataPoints: 450,
+		maxDataPoints: 300,
 		timeBase: new Date().getTime() / 1000
 	}) 
 } );
 
 graph.render();
+
+var hoverDetail = new Rickshaw.Graph.HoverDetail( {
+	graph: graph,
+	yFormatter: function(y) { return y.toPrecision(3) + " mbar" }
+} );
+
+var legend = new Rickshaw.Graph.Legend( {
+	graph: graph,
+	element: document.getElementById('legend')
+
+} );
+
+var shelving = new Rickshaw.Graph.Behavior.Series.Toggle( {
+	graph: graph,
+	legend: legend
+} );
+
+var yAxis = new Rickshaw.Graph.Axis.Y({
+    graph: graph,
+    tickFormat: function(y) { return y.toPrecision(3) + " mbar" }
+});
+
+yAxis.render();
+
+var axes = new Rickshaw.Graph.Axis.Time( {
+	graph: graph
+} );
+axes.render();
 
 // add some data every so often
 
@@ -47,7 +95,10 @@ var iv = setInterval( function() {
 		dataType: 'json',
 		success:  function(pressures) {
 			var data = pressures; //[ pressures.pressure_readings ];
-		
+			/// Transform to logarithmic values
+			// for (var i in data) {
+			// 	data[i] = Math.log(1e10*data[i]) / Math.LN10;
+			// }
 			graph.series.addData(data);
 			graph.render();
 		}
@@ -58,4 +109,3 @@ var iv = setInterval( function() {
 </script>
 
 </body>
-
