--- a/web_resources/history_d3.html
+++ b/web_resources/history_d3.html
@@ -67,7 +67,7 @@ var svg = d3.select("body").append("svg")
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-d3.csv("http://messgeraet01.atom.uni-frankfurt.de:8080/api/pressure_history_csv", function(error, data) {
+d3.csv("http://messgeraet01.atom.uni-frankfurt.de:8080/api/pressure_history_csv?lines=2000", function(error, data) {
   color.domain(d3.keys(data[0]).filter(function(key) { return (key !== "Seconds") && (key != " "); }));
 
   data.forEach(function(d) {
