Better text on web sites

--- a/web_resources/live.html
+++ b/web_resources/live.html
@@ -21,8 +21,8 @@
 
 
 <div id="content">
-	<h3>Vacuum Gauge Pressure Readings</h3>
-	<p>Values of the gauges attached to the HHG setup in the COLTRIMS laboratory:</p>
+	<h3>Live Vacuum Gauge Pressure Readings</h3>
+	<p>The chart below displays real time values of the gauges attached to the HHG setup in the COLTRIMS laboratory:</p>
 	<div id="chart_container">
 		<div id="chart"></div>
 		<div id="legend_container">
