--- a/web_resources/index.html
+++ b/web_resources/index.html
@@ -1,20 +1,31 @@
 <!doctype>
 <!-- similar to http://code.shutterstock.com/rickshaw/examples/fixed.html -->
 <head>
-	<link type="text/css" rel="stylesheet" href="static/graph.css">
-	<link type="text/css" rel="stylesheet" href="static/detail.css">
-	<link type="text/css" rel="stylesheet" href="static/legend.css">
-	<link type="text/css" rel="stylesheet" href="static/extensions.css">
+  <title>Vacuum Gauge Pressure Readings</title>
+  
+  <link type="text/css" rel="stylesheet" href="static/graph.css">
+  <link type="text/css" rel="stylesheet" href="static/detail.css">
+  <link type="text/css" rel="stylesheet" href="static/legend.css">
+  <link type="text/css" rel="stylesheet" href="static/extensions.css">
+  
+  <style>
+  #content {
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  </style>
 
-<title>Vacuum Gauge Pressure Readings</title>
 </head>
 <body>
 
 <div id="content">
-	<h3>Vacuum Gauge Pressure Readings</h3>
-	<p>This websites lets you access the pressure values of the vacuum gauges attached to the HHG setup in the COLTRIMS laboratory.</p>
-	<p>Live display of the pressure values: <a href="/live">/live</a>.</p>
-	<p>Long term trend of the values of the gauges attached to the HHG setup in the COLTRIMS laboratory: <a href="/history">/history</a>.</p>
+  <h3>Vacuum Gauge Pressure Readings</h3>
+  <p>This websites lets you access the pressure values of the vacuum gauges attached to the HHG setup in the COLTRIMS laboratory:</p>
+  <ul>
+   <li><a href="/live">Live display</a> of the pressure values.</li>
+   <li><a href="/history">Long term trend</a> of the pressure values.</li>
+  </ul>
 </div>
 
 </body>
