adding a gauge display

--- a/web_resources/index.html
+++ b/web_resources/index.html
@@ -24,6 +24,7 @@
   <p>This websites lets you access the pressure values of the vacuum gauges attached to the HHG setup in the COLTRIMS laboratory:</p>
   <ul>
    <li><a href="/live">Live display</a> of the pressure values.</li>
+   <li><a href="/gauge">Gauge display</a> of the current pressure values.</li>
    <li><a href="/history">Long term trend</a> of the pressure values.</li>
   </ul>
 </div>
