clearer index page and csv download

--- a/web_resources/index.html
+++ b/web_resources/index.html
@@ -23,9 +23,10 @@
   <h3>Vacuum Gauge Pressure Readings</h3>
   <p>This websites lets you access the pressure values of the vacuum gauges attached to the HHG setup in the COLTRIMS laboratory:</p>
   <ul>
-   <li><a href="/live">Live display</a> of the pressure values.</li>
+   <li><a href="/live">Live graph</a> of the pressure values.</li>
    <li><a href="/digital-display">Digital display</a> of the current pressure values.</li>
-   <li><a href="/history">Long term trend</a> of the pressure values.</li>
+   <li><a href="/history">Long term trend graph</a> of the pressure values.</li>
+   <li><a href="/api/pressure_history_csv">Download a CSV file</a> containing all data.</li>
   </ul>
 </div>
 
