fixing minor glitches: text on digital display, stroke width for Win

--- a/web_resources/digital-display.html
+++ b/web_resources/digital-display.html
@@ -55,7 +55,7 @@
 
 <div id="content">
     <h3>Live Vacuum Gauge Pressure Readings displayed like a Digital Display</h3>
-    <p>The boxes below display the values of the gauges attached to the HHG setup in the COLTRIMS laboratory:</p>
+    <p>The boxes below display the pressure measured by the gauges attached to the HHG setup in the COLTRIMS laboratory:</p>
     <div id="gauge_container">
         <div class='gauge'><div class='label'>Gauge 1</div><div class='value' id="gauge1">n/a</div></div>
         <div class='gauge'><div class='label'>Gauge 2</div><div class='value' id="gauge2">n/a</div></div>
