Hint where this D3 code came from

--- a/web_resources/history.html
+++ b/web_resources/history.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- The code on this page is roughly based on the D3 example on http://bl.ocks.org/3884955 -->
 <head>
 <meta charset="utf-8">
 <style>
