Better heading text on digital display page

--- a/web_resources/digital-display.html
+++ b/web_resources/digital-display.html
@@ -54,7 +54,7 @@
 
 
 <div id="content">
-    <h3>Live Vacuum Gauge Pressure Readings displayed like a Digital Display</h3>
+    <h3>Live Vacuum Gauge Pressure Readings Shown in the Form of a Digital Display</h3>
     <p>The boxes below display the pressure measured by the gauges attached to the HHG setup in the COLTRIMS laboratory:</p>
     <div id="gauge_container">
         <div class='gauge'><div class='label'>Gauge 1</div><div class='value' id="gauge1">n/a</div></div>
